--- a/tex/kapitel/kapitel_3_verwandt.tex
+++ b/tex/kapitel/kapitel_3_verwandt.tex
@@ -3,7 +3,7 @@
 
 Dieses Kapitel stellt weitere Arbeiten dar, die sich mit dem Thema der Laufplanung von sechsbeinigen Laufrobotern mittels Random Sampling auseinandergesetzt haben.
 
-\section{André Herms}
+\section{Globaler Laufplaner nach André Herms}
 
 Andrè Herms \autocite{herms2004} vergleicht zunächst die folgenden Algorithmen zur Laufplanung:
 \begin{itemize}
@@ -75,6 +75,6 @@ Eine Konfigurationsdatei existiert bereits in dieser Umgebung, die es ermöglich
 
 Weiterhin wird die aktuelle Fußkonfiguration sowie die Fußposition getrennt voneinander gespeichert. Die Fußkonfiguration ist in einer Bitlogik gespeichert. Dies ist sehr nützlich um Speicherplatz zu sparen, macht auf der anderen Seite das Finden von Fehlern allerdings schwieriger.
 
-\section{Uli Ruffler}
+\section{Inkremeneteller Laufplaner nach Uli Ruffler}
 
 Uli Ruffler \autocite{ruffler2006} hat den Laufplaner auf eine inkrementelle Arbeitsweise angepasst. Des Weiteren hat er die Basis für die Stereobildverarbeitung gelegt. Der Laufplaner kann nun während des Laufens neue Lösungen generieren, allerdings werden diese Lösungen noch nicht verwendet.
