--- a/tex/titelblatt.tex
+++ b/tex/titelblatt.tex
@@ -402,7 +402,7 @@
 \end{textblock*}
 
 % Thesis
-\begin{textblock*}{\seitenbreite}(\bindekorrektur,\seitenanfang + 130mm)
+\begin{textblock*}{128mm}(45mm,\seitenanfang + 130mm)
   \centering\large\sffamily
   \hsmatyp\\
   \begin{small}\hsmathesistype \end{small}\\
