--- a/tex/docinfo.tex
+++ b/tex/docinfo.tex
@@ -18,7 +18,7 @@
 \newcommand{\hsmajahr}{2020} % Jahr der Abgabe
 \newcommand{\hsmafirma}{} % Firma bei der die Arbeit durchgeführt wurde
 \newcommand{\hsmabetreuer}{Prof. Dr. Thomas Ihme, Hochschule Mannheim} % Betreuer an der Hochschule
-\newcommand{\hsmazweitkorrektor}{Dipl.-Phys. Ute Ihme, Hochschule Mannheim} % Betreuer im Unternehmen oder Zweitkorrektor
+\newcommand{\hsmazweitkorrektor}{Prof. Dr. Jörn Fischer, Hochschule Mannheim} % Betreuer im Unternehmen oder Zweitkorrektor
 \newcommand{\hsmafakultaet}{I} % I für Informatik oder E, S, B, D, M, N, W, V
 \newcommand{\hsmastudiengang}{IB} % IB IMB UIB IM MTB (weitere siehe titleblatt.tex)
 
@@ -33,4 +33,4 @@
 \newcommand{\hsmaabstractde}{Diese Bachelorarbeit beschäftigt sich mit dem Thema der Laufplanung von sechsbeinigen Laufrobotern. Die Arbeit stellt eine Lösung zur Portierung der OpenInventor-Visualisierung nach Gazebo dar. Der Vorteil dabei ist, dass Gazebo eine Physik-Engine mitbringt, so dass der Laufplaner unter wesentlich realeren Bedingungen getestet werden kann. Zur Lösung dieser Portierung wird das Robot Operating System (ROS) genutzt, so dass auch die spätere Anwendung auf einem realen Roboter unkompliziert möglich ist. Das Ergebnis ist ein umfassendes ROS-Package, welches alle nötigen Komponenten zur Visualisierung und zum Laufalgorithmus enthält.}
 
 % Kurze (maximal halbseitige) Beschreibung, worum es in der Arbeit geht auf Englisch
-\newcommand{\hsmaabstracten}{This bachelor thesis is about gait planning of six-legged walking-robots. This thesis offers a solution to migrate from the visualisation in OpenInventor to Gazebo. Since Gazebo uses a physics engine more realistic scenarios can be tested with this new solution. To implement this solution the Robot Operating System is used, so that the gait planner can easily be used on a real robot. The result is an extensive ros package which contains all components of visualisation and gait planning.}
+\newcommand{\hsmaabstracten}{This bachelor thesis is about gait planning of six-legged walking-robots. This thesis offers a solution to migrate from the visualisation in OpenInventor to Gazebo. Since Gazebo uses a physics engine more realistic scenarios can be tested with this new solution. To implement this solution the Robot Operating System is used, so that the gait planner can easily be used on a real robot. The result is an extensive ROS package which contains all components of visualisation and gait planning.}
