--- a/tex/kapitel/kapitel_1_einleitung.tex
+++ b/tex/kapitel/kapitel_1_einleitung.tex
@@ -1,13 +1,13 @@
 \chapter{Einleitung}
 \label{kap1}
 
-Dieses Kapitel führt in das Thema der Portierung des Laufplaner in das \ac{ROS} und Gazebo ein. Neben der Motivation der Arbeit wird hier auch das Ziel der Arbeit definiert. Außerdem stellt dieses Kapitel den Aufbau der Arbeit dar. 
+Dieses Kapitel führt in das Thema der Portierung des Laufplaners in \ac{ROS} und Gazebo ein. Neben der Motivation der Arbeit wird hier auch das Ziel der Arbeit definiert. Außerdem stellt dieses Kapitel den Aufbau der Arbeit dar. 
 
 \section{Motivation}
 
 Die einfachste Art einen Laufroboter zu steuern, ist die Anwendung eines \emph{statischen oder regulären Laufmusters} wie dem \emph{wave gait}. Diese Laufmuster funktionieren auf ebenem Untergrund für beispielsweise sechsbeinige Laufroboter sehr gut und stabil. Anders sieht es allerdings aus, wenn das Gelände Hindernisse aufweist. Es ist in erster Linie sinnvoll zusätzlich zu dem regulären Laufmuster mit einem \emph{reaktiven Laufmuster} auf die Umgebung zu reagieren. Ist ein Gelände allerdings stark uneben und besteht eventuell sogar aus unüberwindbaren Abschnitten, würde das reaktive Laufmuster dominieren. Der Laufroboter würde sich nur noch langsam mittels des reaktiven Laufmusters nach vorne tasten.
 
-Planende Verfahren bzw. \emph{freie Laufmuster} verbessern diesen Prozess, indem sie Lösungen für unebenes Gelände schon vor oder während des Laufens berechnen und daher nicht mehr darauf reagieren müssen, sondern aktiv einen gültigen Weg zu Ziel planen. Dies ist in Fällen wie der Bergung von Opfern in einem unebenen Gelände oder einem Kernkraftwerk-Unfall hilfreich, da in unterschiedlichsten Umgebungen gelaufen werden muss. Aber auch bei Service-Robotern könnte eine solche Planung sinnvoll sein.
+Planende Verfahren bzw. \emph{freie Laufmuster} verbessern diesen Prozess, indem sie Lösungen für unebenes Gelände schon vor oder während des Laufens berechnen und daher nicht mehr darauf reagieren müssen, sondern aktiv einen gültigen Weg zum Ziel planen. Dies ist in Fällen wie der Bergung von Opfern in einem unebenen Gelände oder einem Kernkraftwerk-Unfall hilfreich, da in unterschiedlichsten Umgebungen gelaufen werden muss. Aber auch bei Service-Robotern könnte eine solche Planung sinnvoll sein.
 
 Diese Arbeit nutzt ein bestehendes planendes Verfahren und portiert dieses auf eine Umgebung im \ac{ROS} für den sechsbeinigen Laufroboter Akrobat.
 
@@ -15,7 +15,7 @@ Diese Arbeit nutzt ein bestehendes planendes Verfahren und portiert dieses auf e
 
 André Herms \autocite{herms2004} hat initial verschiedene Algorithmen zur Laufplanung analysiert und eine Auswahl in einer bestehenden OpenInventor-Umgebung \autocite{inventor} für den sechsbeinigen Laufroboter \emph{Lauron III} entwickelt. Dabei hat sich aus einer Auswahl von sieben Algorithmen und den Auswahlkriterien Anytime-Fähigkeit, Parallelisierbarkeit, Speicherbedarf und Anwendbarkeit das Random Sampling als beste Wahl herausgestellt.
 
-Uli Ruffler \autocite{ruffler2006} hat diesen Algorithmus auf eine inkrementelle Funktionsweise weiterentwickelt sowie weitere Anpassungen vorgenommen.
+Uli Ruffler \autocite{ruffler2006} hat diesen Algorithmus auf eine inkrementelle Funktionsweise weiterentwickelt sowie weitere Anpassungen am Laufplanungsalgorithmus vorgenommen.
 
 Das Ziel dieser Arbeit ist nun diesen Laufplaner für den \emph{Akrobat} bereitzustellen. Da dieser Laufroboter auf \ac{ROS} aufgesetzt ist, muss die OpenInventor-Umgebung migriert werden. Da es sich um ein anderes Robotermodell handelt, müssen auch weitere Anpassungen vorgenommen werden.
 
@@ -23,7 +23,7 @@ Als Simulationsumgebung bietet sich Gazebo an, da Gazebo neben einer Visualisier
 
 \section{Aufbau der Arbeit}
 
-Die Arbeit beginnt in \autoref{kap2} mit den Grundlagen, die für die Portierung des Laufplaners in das \ac{ROS} und Gazebo nötig sind. Dabei geht die Arbeit auf den Laufroboter, auf direkte und inverse Kinematik sowie die Grundlagen zur Laufplanung ein. Außerdem werden die benötigten Frameworks wie das \ac{ROS} und Gazebo vorgestellt. Des Weiteren wird die Verwendung von Robotermodellen in \ac{ROS} und Gazebo erklärt.
+Die Arbeit beginnt in \autoref{kap2} mit den Grundlagen, die für die Portierung des Laufplaners nach \ac{ROS} und Gazebo nötig sind. Dabei geht die Arbeit auf den Laufroboter, auf direkte und inverse Kinematik sowie die Grundlagen zur Laufplanung ein. Außerdem werden die benötigten Frameworks wie das \ac{ROS} und Gazebo vorgestellt. Des Weiteren wird die Verwendung von Robotermodellen in \ac{ROS} und Gazebo erklärt.
 
 \autoref{kap3} geht auf verwandete Arbeiten ein. Diese werden in \autoref{kap4} genutzt, um eine Lösung für die Laufplanung mit dem Akrobat herzuleiten. \autoref{kap5} stellt die Details der Implementierung dar.
 
