--- a/tex/titelblatt.tex
+++ b/tex/titelblatt.tex
@@ -411,7 +411,7 @@
 \end{textblock*}
 
 % Fakultät
-\begin{textblock*}{\seitenbreite}(\bindekorrektur,\seitenanfang + 165mm)
+\begin{textblock*}{128mm}(45mm,\seitenanfang + 165mm)
   \centering\large\sffamily
   \hsmafakultaetlang\\
   \vspace{2mm}
@@ -419,7 +419,7 @@
 \end{textblock*}
 
 % Datum
-\begin{textblock*}{\seitenbreite}(\bindekorrektur,\seitenanfang + 190mm)
+\begin{textblock*}{128mm}(45mm,\seitenanfang + 190mm)
   \centering\large
   \textsf{\hsmadatum}
 \end{textblock*}
