--- a/tex/kapitel/kapitel_5_implementierung.tex
+++ b/tex/kapitel/kapitel_5_implementierung.tex
@@ -213,7 +213,7 @@ Außerdem macht dies das Debugging einfacher, da sich in einer gekapselten Klass
 
 \subsection{Nutzung des \textsc{tf}-Frameworks und Anpassung aller Maße}
 
-Alle 2D und 3D-Berechnungen werden nun mit dem \textsc{tf}-Framework aus \ac{ROS} berechnet. Dieses speichert alle Längenangaben in Meter. Da die OpenInventor-Simulation alle Angaben in Millimeter gespeichert hat, muss der Algorithmus ebenfalls Meterangaben liefern.
+Alle 2D und 3D-Berechnungen werden nun mit dem \textsc{tf}-Framework aus \ac{ROS} berechnet. Dieses speichert alle Längenangaben in Meter. Da die vorherige Simulation alle Angaben in Millimeter gespeichert hat, muss der Algorithmus ebenfalls Meterangaben liefern.
 
 Des Weiteren müssen weitere definierte Angaben verändert werden:
 \begin{itemize}
