--- a/tex/kapitel/kapitel_6_test.tex
+++ b/tex/kapitel/kapitel_6_test.tex
@@ -57,7 +57,7 @@ Sind diese Werte angepasst, ergeben sich wie in \autoref{kap5:footDownNormal1} u
     \resizebox{0.75\linewidth}{!}{
       \input{bilder/kapitel5/footmov3.pgf}
     }
-    \caption{Auswertung von Bewegungen von Körper und Füßen}\label{kap5:footCenterMovements}
+    \caption{Auswertung von Bewegungen von Körper und Füßen bei mehreren Versuchen}\label{kap5:footCenterMovements}
     \end{center}
 \end{figure}
 
