--- a/tex/titelblatt.tex
+++ b/tex/titelblatt.tex
@@ -431,7 +431,7 @@
 \end{textblock*}
 
 % Betreuer
-\begin{textblock*}{\seitenbreite}(\bindekorrektur,\seitenanfang + 240mm)
+\begin{textblock*}{128mm}(45mm,\seitenanfang + 240mm)
   \centering\large\sffamily
   \hsmatutor \\
   \vspace{2mm}
