Wegpunkte als pgf

--- a/tex/kapitel/kapitel_2_grundlagen.tex
+++ b/tex/kapitel/kapitel_2_grundlagen.tex
@@ -392,7 +392,9 @@ Nachdem die Anzahl der Pfadsegmente definiert ist, müssen nun die Koordinaten d
 
 \begin{figure}[t!]
   \centering
-  \includegraphics[width=1\textwidth]{kapitel2/rswegpunkte}
+  \resizebox{0.9\linewidth}{!}{
+    \input{bilder/kapitel2/rswegpunkte.pgf}
+  }
   \caption{Zufällig generierte Wegpunkte}
   \label{Kap2:RSWegpunkte}
 \end{figure}
